<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ludii</groupId>
    <artifactId>Ludii-XAI-Maven</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>AI</module>
        <module>Common</module>
        <module>Core</module>
        <module>Evaluation</module>
        <module>Features</module>
        <module>Generation</module>
        <module>LudiiDocGen</module>
        <module>Manager</module>
        <module>Mining</module>
        <module>Player</module>
        <module>PlayerDesktop</module>
        <module>ViewController</module>
        <module>XAI</module>
    </modules>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
